--- a/common/style/index_style.css
+++ b/common/style/index_style.css
@@ -1,4 +1,7 @@
 @charset "utf-8";
+::-webkit-scrollbar{width:0;}
+::-webkit-scrollbar-thumb{background-color:rgba(255,255,255,.7)}
+::-webkit-scrollbar-track{background-color:rgba(0,0,0,0)}
 body {
     font-family: "PlayfairDisplay", 돋움, sans-serif;
     color: #000;
@@ -45,8 +48,8 @@ main .mainBackground {
     position: absolute;
 }
 main .mainBackground_rh {
-    width: 1250px;
-    top: -28%; right: -17%;
+    width: 1400px;
+    top: -33%; right: -20%;
 }
 main .mainBackground_lf {
     width: 700px;
@@ -63,7 +66,7 @@ main .main_star_playX {
 main h4 {
     font-family: "양진체", 돋움, sans-serif;
     font-size: 3rem;
-    color: #be94fd;
+    color: #c98cfc;
     text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
     position: absolute;
     top: 45%; right: 5%;
@@ -168,7 +171,7 @@ main .arrow .viewTitle h2 {
 /* 포트폴리오 */
 .portfolio {
     width: 100%; height: 100vh;
-    background-color: rgb(254, 198, 198);
+    background-color: #000;
     color: #fff;
     position: relative;
 }
@@ -183,10 +186,7 @@ main .arrow .viewTitle h2 {
 }
 .portfolio_arrow {
     position: absolute;
-    bottom: 10%; left: 11.8%;
-}
-.package {
-    background-color: rgb(195, 113, 113);
+    bottom: 10%; left: 11%;
 }
 .Project_Img {
     /* position: absolute;
@@ -196,13 +196,33 @@ img.Project_Img {
     width: 1150px;
     border-radius: 35px;
 }
+.slide_title {
+  position: absolute;
+  bottom: 20%; left: 10%;
+  text-align: left;
+}
+.projectDate {font-family: "NotoSans", 돋움, sans-serif;font-size: 16px; font-weight: 400;}
+.projectName_En {font-size: 3rem; font-weight: 500;}
+.projectName_Kr{font-family: "NotoSans", 돋움, sans-serif;font-size: 2rem; font-weight: 400;}
 
+.projectItmBox {
+    display: flex;
+    font-family: "NotoSans", 돋움, sans-serif;
+    font-size: 16px; font-weight: 300;
+    margin-top: 15px;
+}
+.projectItmBox p {
+    border: 1px solid #fff;
+    padding: 5px 25px;
+    border-radius: 10px;
+    margin-right: 15px;
+}
 
 
 /* about-1 */
 .about {
     width: 100%; height: 100vh;
-    background: url(../images/object/articleBackground-07.png) no-repeat 50%/ cover;
+    background: url(../images/object/articleBackground-23.png) no-repeat 50%/ contain;
     color: #000;
     position: relative;
 }
@@ -412,6 +432,7 @@ img.aboutStar_bk2 {
 
 /* contact */
 .contact {
+    width: 100%; height: 100vh;
     background-color: transparent;
     color: #000;
 }
@@ -423,7 +444,7 @@ img.aboutStar_bk2 {
 }
 .contact .PortfolioText {
     line-height: 20vh;
-    font-size: 4.8rem;
+    font-size: 87px;
 
     font-weight: 700;
 
@@ -438,7 +459,7 @@ img.aboutStar_bk2 {
 
 
 img.contact_Logo {
-    
+    padding: 100px;
 }
 .contact_Logo {
     margin-right: auto;
@@ -449,31 +470,95 @@ img.contact_Logo {
     width: 100%; height: 80vh;
 
     display: flex;
-    justify-content: flex-end;
 }
 .contactBackgroundFlex {
     display: flex;
+    align-items: baseline;
 }
-.contactBackground_Title {
+/* .contactBackground_Title {
+    width: 1000px;
     display: flex;
     flex-direction: column;
     position: absolute;
-    bottom: 10%; right: 5%;
+    bottom: 10%; right: 0;
 
     font-size: 3rem;
-}
+} */
 .contactBackground_MainTitle {
+    position: absolute;
+    top: 35%; right: 21%;
 }
 .contactBackground_MainTitle h2 {
     font-size: 4rem;
     font-weight: 700;
+    margin-right: 100px;
 }
 .contactBackground_MainTitle .contact_Menu {
     font-size: 2rem;
     font-weight: 700;
 }
+.contactBackground_MainTitle .contact_Menu li {
+    height: 43px; line-height: 43px;
+    margin-right: 40px;
+
+}
+.contactBackground_MainTitle .contact_Menu li:last-child {
+    margin-right: 0;
+}
+.contactBackground_SubTitle {
+    width: 990px;
+    border-top: 3px solid #000;
+    position: absolute;
+    bottom: 12%; right: 0%;
+
+    font-size: 2rem;
+}
 .contact_SubTitle {
     display: flex;
+    align-items: center;
+    padding-top: 40px;
+    padding-left: 20px;
+}
+.contact_SubTitle h3 {
+    width: 184px;
+    text-align: center;
+    border: 1.5px solid #000;
+    border-radius: 80%;
+    padding: 20px 40px;
+    margin-right: 30px;
+
+    font-weight: 500;
+}
+.contact_SubTitle p {
+    font-family: "NotoSans", 돋움, sans-serif;
+    font-size: 1.5rem;
+}
+
+/* scrollTo */
+.scrollTo {
+    position: absolute;
+    bottom: 5%; right: 2%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.scrollTo span {
+}
+.material-symbols-outlined {
+    font-size: 90px;
+    font-weight: 100;
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+  }
+.scrollTo p {
+    font-weight: 600;
+    font-style: italic;
+
+    font-size: 1.5rem;
 }
 
 
@@ -483,10 +568,41 @@ footer {
     color: #fff;
 
     width: 100%; height: 20vh;
+    padding: 40px 70px;
+    color: #B5B5B5;
+}
+/* .footerTitle {
     display: flex;
     justify-content: flex-end;
-    align-items: center;
+    align-items: baseline;
+
+} */
+.footerMain_font {
+    display: flex;
+    align-items: flex-end;
+}
+footer .copy {
+    margin-top: 40px;
+    /* border-top: 1px solid #333; */
+    width: 100%;
+    text-align: right;
 }
 footer h3 {
     font-size: 2rem;
+    margin-right: auto;
+    font-weight: 500;
 }
+footer p {
+    font-family: "NotoSans", 돋움, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+}
+footer p:nth-child(1) {
+    margin-bottom: 40px;
+}
+.footerMg {
+    margin-right: 100px;
+}
+/* .fontColor {
+    color: #333;
+} */
