--- a/common/style/index_style.css
+++ b/common/style/index_style.css
@@ -12,7 +12,7 @@ body {
 /* header */
 header {
     position: fixed;
-    width: 100%; height: 10vh;
+    width: 100%; height: 14vh;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -35,7 +35,19 @@ header .Menu a{
 header .Menu li:nth-child(4) a{
     padding-right: 44px;
 }
+.header_Logo2 {
+    display: none;
+}
+.header_Logo2.on {
+    display: block;
+    position: absolute;
+    left: 1.5%; top: 19%;
+    width: 110px;
 
+}
+.header_Logo.remove {
+    display: none;
+}
 
 /* main */
 main {
@@ -57,7 +69,7 @@ main .mainBackground_lf {
 }
 main .main_fonts {
     width: 1000px;
-    top: -54%; left: -32%;
+    top: -54%; left: -31%;
 }
 main .main_star_playX {
     top: 0; left: 0;
@@ -89,9 +101,25 @@ main .mainTitle h2 {
     font-family: "양진체", 돋움, sans-serif;
     color: #000;
     float: left;
+    letter-spacing: 4px;
 }
 main .mainTitle h2:nth-child(1) {
     color: #fff;
+}
+
+/* 생기-별 */
+main .fontStar {
+    position: absolute;
+    top: 51.5%; right: 32.5%;
+}
+img.fontStar {
+    width: 170px;
+}
+main .mainTitle .size_fall {
+    font-size: 3.1rem;
+    height: 85px; line-height: 85px;
+    margin-right: 8%;
+    /* margin-bottom: 8%; */
 }
 
 .mgRt {
@@ -188,6 +216,14 @@ main .arrow .viewTitle h2 {
     position: absolute;
     bottom: 10%; left: 11%;
 }
+/* .portfolio_arrowPF {
+    position: absolute;
+    bottom: 15%; left: 61%;
+} */
+.portfolio_arrowPF {
+    position: absolute;
+    bottom: 15%; left: 0%;
+}
 .Project_Img {
     /* position: absolute;
     top: 15%; right: 15%; */
@@ -195,6 +231,13 @@ main .arrow .viewTitle h2 {
 img.Project_Img {
     width: 1150px;
     border-radius: 35px;
+}
+.portfolio_subTitle {
+    width: 90px;
+    text-align: right;
+    font-family: "NotoSans", 돋움, sans-serif;font-size: 18px; font-weight: 400;
+    position: absolute;
+    bottom: 10%; left: 42%;
 }
 .slide_title {
   position: absolute;
@@ -216,6 +259,20 @@ img.Project_Img {
     padding: 5px 25px;
     border-radius: 10px;
     margin-right: 15px;
+}
+.portfolioTxt {
+    width: 300px; height: 900px;
+    position: relative;
+}
+/* .portfolioTxt.fixed {
+    position: fixed;
+    bottom: 0%;
+    z-index: 9999;
+} */
+.TitleBox_Work.fixed {
+    position: fixed;
+    bottom: 40%;
+    z-index: 9999;
 }
 
 
