--- a/common/style/index_style.css
+++ b/common/style/index_style.css
@@ -6,6 +6,7 @@ body {
     font-family: "PlayfairDisplay", 돋움, sans-serif;
     color: #000;
     position: relative;
+    cursor: pointer;
 }
 
 
@@ -26,14 +27,34 @@ header h1 {
 header .Menu{
     display: flex;
 }
+header .Menu li {
+    margin-right: 40px;
+}
 header .Menu a{
     font-size: 1.8rem;
     height: 80px;
-    padding: 0 20px;
+    /* padding: 0 20px; */
     font-weight: 500;
 }
-header .Menu li:nth-child(4) a{
-    padding-right: 44px;
+.text_doc {
+    text-decoration: none;
+    background-image: linear-gradient( #292929,  #292929);
+    background-repeat: no-repeat;
+    background-position: bottom left;
+    background-size: 0% 2px;
+    transition: background-size 500ms ease-in-out;
+}
+.text_doc:hover {
+    background-size: 100% 2px;
+    color: inherit;
+}
+.text_doc:hover.check {
+    background-size: 100% 2px;
+    color: inherit;
+    background-image: linear-gradient( #fff,  #fff);
+}
+header .Menu li:nth-child(4) {
+    margin-right: 44px;
 }
 .header_Logo2 {
     display: none;
@@ -205,24 +226,21 @@ main .arrow .viewTitle h2 {
 }
 
 .portfolio_Title {
-    font-size: 8rem;
+    font-size: 5.2rem;
     font-weight: 800;
     transform: rotate(-90deg);
 
     position: absolute;
-    bottom: 40%;
+    bottom: 45%; left: -10%;
 }
 .portfolio_arrow {
     position: absolute;
     bottom: 10%; left: 11%;
 }
-/* .portfolio_arrowPF {
-    position: absolute;
-    bottom: 15%; left: 61%;
-} */
+/* work 화살표 */
 .portfolio_arrowPF {
     position: absolute;
-    bottom: 15%; left: 0%;
+    bottom: 7%; left: 61%;
 }
 .Project_Img {
     /* position: absolute;
@@ -237,7 +255,7 @@ img.Project_Img {
     text-align: right;
     font-family: "NotoSans", 돋움, sans-serif;font-size: 18px; font-weight: 400;
     position: absolute;
-    bottom: 10%; left: 42%;
+    bottom: 5%; left: 42%;
 }
 .slide_title {
   position: absolute;
@@ -264,19 +282,22 @@ img.Project_Img {
     width: 300px; height: 900px;
     position: relative;
 }
-/* .portfolioTxt.fixed {
+.TitleBox_Work {
+    width: 300px; height: 900px;
+    position: relative;
+}
+/* .TitleBox_Work.fixed {
     position: fixed;
-    bottom: 0%;
+    bottom: 0;
     z-index: 9999;
 } */
-.TitleBox_Work.fixed {
-    position: fixed;
-    bottom: 40%;
-    z-index: 9999;
-}
 
 
 /* about-1 */
+.TitleBox_About {
+    position: static;
+    bottom: 10%;
+}
 .about {
     width: 100%; height: 100vh;
     background: url(../images/object/articleBackground-23.png) no-repeat 50%/ contain;
@@ -315,18 +336,41 @@ img.profileImg {
 
     display: block;
 }
+.about_mention_bg span {
+    width: 220px; height: 50px;
+    margin-top: 2%;
+    margin-right: 2%;
+    float: left;
+    box-shadow: 0 2px 13px 0 rgba(45, 54, 65, 0.25);
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.about_mention_bg span:nth-child(3) {
+    width: 150px;
+}
 .about_mention_bg h2 {
     font-family: "NotoSans", 돋움, sans-serif;
     font-size: 1.4rem;
     font-weight: bold;
-
-    
-    background-color: #000;
     color: #fff;
-    padding: 10px 15px;
-    margin-top: 2%;
-    margin-right: 2%;
-    float: left;
+    display: flex;
+    align-items: center;
+
+    /* 텍스트 박스 그라데이션 */
+    background-image: linear-gradient(to right, #ff99ff, #fff, #b3ccff, #d966ff);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+
+    transition: 0.5s;
+    background-size: 200% auto;
+}
+.about_mention_bg h2:hover {
+    background-position: right center;background-image: linear-gradient(to right, #ff99ff, #fff, #b3ccff, #d966ff);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    transition: 0.3s;
 }
 .about_mention_bg h2:nth-child(-n+2) {
     margin-top: 0;
@@ -512,15 +556,19 @@ img.aboutStar_bk2 {
     display: block;
 }
 
-
-
-
+/* 컨텍트 로고 */
 img.contact_Logo {
-    padding: 100px;
+    padding: 100px 80px 80px 80px ;
 }
 .contact_Logo {
     margin-right: auto;
+    /* animation:text-focus-in 3.5s cubic-bezier(.55,.085,.68,.53) both infinite; */
+    animation:jello-horizontal .9s backwards  infinite;
 }
+/* @-webkit-keyframes text-focus-in{
+    0%{-webkit-filter:blur(12px);filter:blur(12px);opacity:0}100%{-webkit-filter:blur(0);filter:blur(0);opacity:1}}@keyframes text-focus-in{0%{-webkit-filter:blur(12px);filter:blur(12px);opacity:0}100%{-webkit-filter:blur(0);filter:blur(0);opacity:1}} */
+    @keyframes jello-horizontal{0%{transform:scale3d(1,1,1)}30%{transform:scale3d(1.25,.75,1)}40%{transform:scale3d(.75,1.25,1)}50%{transform:scale3d(1.15,.85,1)}65%{transform:scale3d(.95,1.05,1)}75%{transform:scale3d(1.05,.95,1)}100%{transform:scale3d(1,1,1)}}
+
 .contactBackground {
     background: url(../images/object/contactBackground-08.png) no-repeat 50%/ cover;
 
@@ -586,6 +634,12 @@ img.contact_Logo {
 
     font-weight: 500;
 }
+.contact_SubTitle h3:hover {
+    background-color: #000;
+    color: #fff;
+
+    transition: 0.3s;
+}
 .contact_SubTitle p {
     font-family: "NotoSans", 돋움, sans-serif;
     font-size: 1.5rem;
@@ -600,17 +654,19 @@ img.contact_Logo {
     flex-direction: column;
     align-items: center;
 }
-.scrollTo span {
-}
 .material-symbols-outlined {
+    
     font-size: 90px;
     font-weight: 100;
+    animation:flip-in-hor-bottom .5s cubic-bezier(.25,.46,.45,.94) both infinite;
     font-variation-settings:
     'FILL' 0,
     'wght' 400,
     'GRAD' 0,
     'opsz' 48
   }
+  @keyframes flip-in-hor-bottom{0%{transform:rotateX(80deg);opacity:0}100%{transform:rotateX(0);opacity:1}}
+
 .scrollTo p {
     font-weight: 600;
     font-style: italic;
