--- a/common/style/index_style.css
+++ b/common/style/index_style.css
@@ -115,6 +115,8 @@ main h4 {
   top: 45%;
   right: 5%;
 }
+.title_ani {
+}
 main .mainTitle {
   width: 700px;
   height: 208px;
@@ -247,7 +249,46 @@ main .arrow .viewTitle h2 {
   color: #fff;
   position: relative;
 }
+img.Project_Img {
+  width: 1150px;
+  border-radius: 35px;
+}
+/* swiper 타이틀 */
+.slide_title {
+  position: absolute;
+  bottom: 20%;
+  left: 10%;
+  text-align: left;
+}
+.projectDate {
+  font-family: "NotoSans", 돋움, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+.projectName_En {
+  font-size: 3rem;
+  font-weight: 500;
+}
+.projectName_Kr {
+  font-family: "NotoSans", 돋움, sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+}
+.projectItmBox {
+  display: flex;
+  font-family: "NotoSans", 돋움, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  margin-top: 15px;
+}
+.projectItmBox p {
+  border: 1px solid #fff;
+  padding: 5px 25px;
+  border-radius: 10px;
+  margin-right: 15px;
+}
 
+/* 왼쪽 타이틀 */
 .portfolioTxt {
   width: 300px;
   height: 900px;
@@ -272,11 +313,6 @@ main .arrow .viewTitle h2 {
   bottom: 7%;
   left: 61%;
 }
-img.Project_Img {
-  width: 1150px;
-  border-radius: 35px;
-}
-
 .publishingTitle {
   bottom: 45%;
   left: -10%;
@@ -290,25 +326,27 @@ img.Project_Img {
   right: 5%;
   font-size: 7.5rem;
 }
-
 /* 타이틀 js */
 .TitleBox_Pub.fixed {
   width: 300px;
   height: 900px;
   position: fixed;
   bottom: 3%;
+  animation: bounce 2s infinite;
 }
 .TitleBox_Package.fixed {
   width: 300px;
   height: 900px;
   position: fixed;
   bottom: 3%;
+  animation: bounce 2s infinite;
 }
 .TitleBox_Web.fixed {
   width: 300px;
   height: 900px;
   position: fixed;
   bottom: 3%;
+  animation: bounce 2s infinite;
 }
 .TitleBox_About.fixed {
   width: 300px;
@@ -316,46 +354,12 @@ img.Project_Img {
   position: fixed;
   bottom: 3%;
   z-index: 9999;
+  animation: bounce 2s infinite;
 }
 .aboutTitle {
   font-size: 7.5rem;
   bottom: 38%;
   right: -12%;
-}
-
-.slide_title {
-  position: absolute;
-  bottom: 20%;
-  left: 10%;
-  text-align: left;
-}
-.projectDate {
-  font-family: "NotoSans", 돋움, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-}
-.projectName_En {
-  font-size: 3rem;
-  font-weight: 500;
-}
-.projectName_Kr {
-  font-family: "NotoSans", 돋움, sans-serif;
-  font-size: 2rem;
-  font-weight: 400;
-}
-
-.projectItmBox {
-  display: flex;
-  font-family: "NotoSans", 돋움, sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-  margin-top: 15px;
-}
-.projectItmBox p {
-  border: 1px solid #fff;
-  padding: 5px 25px;
-  border-radius: 10px;
-  margin-right: 15px;
 }
 
 /* about-1 */
@@ -372,12 +376,12 @@ img.profileImg {
   border-radius: 250px 250px 0 0;
   position: absolute;
   bottom: 10%;
-  right: 5%;
+  right: 10%;
 }
 .about_mention {
   position: absolute;
   bottom: 28%;
-  left: 30%;
+  left: 25%;
 }
 .about_mention h2 {
   font-family: "NotoSans", 돋움, sans-serif;
@@ -398,10 +402,30 @@ img.profileImg {
   width: 460px;
   position: absolute;
   bottom: 10%;
-  left: 30%;
+  left: 25%;
 
   display: block;
   cursor: pointer;
+}
+.about_mention_bg span {
+  width: 220px;
+  height: 50px;
+  margin-top: 2%;
+  margin-right: 2%;
+  float: left;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about_mention_bg span:nth-child(3) {
+  width: 150px;
+}
+.about_mention_bg span:hover {
+  animation-name: wobble-vertical;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
 }
 @keyframes wobble-vertical {
   16.65% {
@@ -423,27 +447,7 @@ img.profileImg {
     transform: translateY(0);
   }
 }
-.about_mention_bg span {
-  width: 220px;
-  height: 50px;
-  margin-top: 2%;
-  margin-right: 2%;
-  float: left;
-  box-shadow: 0 2px 13px 0 rgba(45, 54, 65, 0.25);
-  background-color: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.about_mention_bg span:nth-child(3) {
-  width: 150px;
-}
-.about_mention_bg span:hover {
-  animation-name: wobble-vertical;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: 1;
-}
+
 .about_mention_bg h2 {
   font-family: "NotoSans", 돋움, sans-serif;
   font-size: 1.4rem;
@@ -483,17 +487,19 @@ img.aboutStar {
 img.aboutStar_bkLine {
   width: 37px;
 }
+/* 오른쪽 */
 .aboutStar_bkLine {
   top: 51%;
-  left: 50%;
+  left: 43%;
   transform: rotate(-60deg);
 }
 img.aboutStar_bkLine2 {
   width: 31px;
 }
+/* 왼쪽 */
 .aboutStar_bkLine2 {
   top: 48%;
-  left: 28.9%;
+  left: 23%;
 }
 
 img.aboutStar_bk {
@@ -501,14 +507,15 @@ img.aboutStar_bk {
 }
 .aboutStar_bk {
   top: 45%;
-  left: 47.5%;
+  left: 41%;
 }
+/* 왼쪽 */
 img.aboutStar_bk2 {
   width: 60px;
 }
 .aboutStar_bk2 {
   top: 50%;
-  left: 25.5%;
+  left: 21%;
   transform: rotate(-110deg);
 }
 
@@ -518,7 +525,7 @@ img.aboutStar_bk2 {
 
   position: absolute;
   bottom: 10%;
-  right: 5%;
+  right: 10%;
 }
 .portfolioSkill {
   border: 3px solid #000;
@@ -533,22 +540,8 @@ img.aboutStar_bk2 {
   font-weight: bold;
 
   text-align: center;
-  width: 378px;
-  height: 178px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  border-bottom: 3px solid #000;
-}
-.portfolioSkill h3 {
-  font-family: "NotoSans", 돋움, sans-serif;
-  font-size: 1.5rem;
-  font-weight: bold;
-
-  text-align: center;
-  width: 378px;
-  height: 158px;
+  width: 414px;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -557,29 +550,18 @@ img.aboutStar_bk2 {
 }
 .portfolioSkill ul {
   font-family: "NotoSans", 돋움, sans-serif;
-  font-size: 1.1rem;
+  font-size: 1.15rem;
   font-weight: 400;
-
-  width: 378px;
-  height: 355px;
+  width: 414px;
+  height: 480px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-
+  align-content: space-around;
   list-style: disc;
-
-  line-height: 1.75;
-}
-.skillMg_Graphic {
-  margin-left: 25%;
-}
-.skillMg_Web {
-  margin-left: 12%;
-}
-.skillMg_Git {
-  margin-left: 17%;
+  line-height: 1.8;
 }
 
 /* about-3 */
@@ -589,7 +571,7 @@ img.aboutStar_bk2 {
 
   position: absolute;
   bottom: 10%;
-  right: 5%;
+  right: 10%;
 }
 .portfolioPersonal {
   display: flex;
@@ -618,7 +600,7 @@ img.aboutStar_bk2 {
   align-items: center;
 }
 .portfolioPersonal ul {
-  width: 835px;
+  width: 948px;
   line-height: 1.75;
 }
 
@@ -682,18 +664,6 @@ img.aboutStar_bk2 {
   cursor: pointer;
 }
 @keyframes marquee {
-  /* from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-50%);
-  }
-}
-@media (hover: hover) and (min-width: 700px) {
-  .animated-title .content {
-    -webkit-transform: translateY(calc(100% - 8rem));
-    transform: translateY(calc(100% - 8rem));
-  } */
   0% {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
@@ -710,8 +680,8 @@ img.contact_Logo {
 }
 .contact_Logo {
   margin-right: auto;
-  /* animation:text-focus-in 3.5s cubic-bezier(.55,.085,.68,.53) both infinite; */
-  animation: jello-horizontal 0.9s backwards infinite;
+  animation: jello-horizontal 2s backwards infinite;
+  animation-delay: 2s;
 }
 
 @keyframes jello-horizontal {
@@ -837,30 +807,43 @@ p.text_doc_Contact {
   position: absolute;
   bottom: 5%;
   right: 2%;
+  color: #292929;
 
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: 1s;
+}
+.scrollTo:hover {
+  color: #000;
 }
 .material-symbols-outlined {
   cursor: pointer;
   font-size: 90px;
   font-weight: 100;
-  animation: flip-in-hor-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both
-    infinite;
-  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
-}
-@keyframes flip-in-hor-bottom {
-  0% {
-    transform: rotateX(80deg);
-    opacity: 0;
-  }
-  100% {
-    transform: rotateX(0);
-    opacity: 1;
-  }
-}
 
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+.material-symbols-outlined:hover {
+  animation: none;
+}
 .scrollTo p {
   font-weight: 600;
   font-style: italic;
@@ -913,3 +896,18 @@ footer p:nth-child(1) {
 /* .fontColor {
     color: #333;
 } */
+
+/* 페이지 전환 페이드인업 */
+.page {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 1.5s all ease;
+}
+
+.page.active {
+  transform: translateY(0);
+  opacity: 1;
+}
