--- a/common/style/index_style.css
+++ b/common/style/index_style.css
@@ -368,8 +368,8 @@ img.Project_Img {
 .about {
   width: 100%;
   height: 100vh;
-  background: fixed url(../images/object/articleBackground-23.png) no-repeat 50% /
-    cover;
+  background: fixed url(../images/object/articleBackground_1920.png) no-repeat
+    50% / cover;
   color: #000;
   position: relative;
 }
@@ -711,7 +711,7 @@ img.contact_Logo {
 }
 
 .contactBackground {
-  background: fixed url(../images/object/contactBackground-08.png) no-repeat 50% /
+  background: url(../images/object/contactBackground-08.png) no-repeat 50% /
     cover;
 
   width: 100%;
