--- a/project/identity/style/identity.css
+++ b/project/identity/style/identity.css
@@ -1,5 +1,14 @@
 @charset "utf-8";
-
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #ff9de6;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: #fff;
+}
 body {
   font-family: "PlayfairDisplay", 돋움, sans-serif;
   color: #000;
@@ -7,12 +16,13 @@ body {
 }
 header {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 14vh;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   z-index: 9999;
+  transition: top 0.2s ease-in-out;
 }
 header h1 {
   width: 100px;
@@ -70,7 +80,7 @@ header .Menu li:nth-child(4) {
 
 /* Main */
 main {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: url(../images/webMain.png) no-repeat 50% / cover;
   position: relative;
@@ -108,6 +118,7 @@ main .SubTitle_Box p {
   text-align: center;
   margin-right: 2%;
   cursor: pointer;
+  transition: 0.5s;
 }
 main .SubTitle_Box p:hover {
   background-color: #000;
@@ -116,22 +127,39 @@ main .SubTitle_Box p:hover {
 
 /* section */
 section {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  /* height: 2200px; */
+  position: relative;
+  background-color: #fff;
+  box-sizing: border-box;
   background: fixed url(/common/images/object/articleBackground_1920.png)
     no-repeat 50% / cover;
-  position: relative;
+}
+.bg_container {
+  /* width: 100%;
+  height: 100vh;
+  background: fixed url(/common/images/object/articleBackground_1920.png)
+    no-repeat 50% / cover; */
 }
 .part {
   width: 80vw;
   display: flex;
   position: sticky;
-  justify-content: flex-end;
+  justify-content: flex-start;
   margin: 0 auto;
-  /* padding: 6% 15%; */
+  border-bottom: 1px solid #000;
+  box-sizing: border-box;
+}
+.part:nth-child(n + 4) {
+  border-bottom: none;
 }
 .part .title {
-  margin-right: auto;
+  margin-right: 18%;
+  width: 324px;
+  text-align: center;
+}
+.ProjectTitle {
+  margin-top: 15%;
 }
 .part .title h2 {
   font-size: 2.4rem;
@@ -143,6 +171,7 @@ section {
   line-height: 106px;
 }
 .mentionBox {
+  margin-top: 15%;
 }
 .mentionBox .mention {
   margin-top: 7%;
@@ -156,18 +185,441 @@ section {
   font-size: 1.1rem;
   font-weight: 300;
   margin-top: 2%;
+  line-height: 1.6;
 }
 .box {
+  margin-top: 10%;
+  margin-bottom: 10%;
   display: flex;
   font-family: "NotoSans", 돋움, sans-serif;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
+.box_1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-right: 1px solid #333;
+  padding: 0 45px;
+}
+.box_1:first-child {
+  padding-left: 0;
+}
+.box_1:last-child {
+  border: 0;
+}
 .box_1 h4 {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 500;
 }
 .box_1 p {
-  font-size: 1.2rem;
+  margin-top: 5%;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.Design {
+}
+.TitleTitle {
+  margin-top: 5%;
+}
+.Box {
+  margin-top: 9%;
+}
+.Identity {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.innerTitle {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+.innerMg {
+  margin-top: 8%;
+}
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.figure_symbol {
+  margin-right: 5%;
+}
+.figure_logobk {
+  margin-right: 3%;
+}
+img.logo_bk {
+  width: 160px;
+}
+img.symbol {
+  width: 160px;
+}
+.symbol {
+  margin-right: 25%;
+}
+figcaption {
+  text-align: center;
+}
+.Keyword {
+  /* border: 1px solid #000; */
+}
+.logo_mention {
+  width: 415px;
+  font-family: "NotoSans", 돋움, sans-serif;
+  font-size: 1.1rem;
   font-weight: 400;
+  line-height: 1.6;
+}
+.innerMention {
+  font-family: "NotoSans", 돋움, sans-serif;
+  font-size: 1.3rem;
+  font-weight: 400;
+  margin-top: 2%;
+}
+.toolBox {
+  display: flex;
+  flex-direction: row;
+}
+.tool {
+  font-size: 1.5rem;
+  /* border-right: 1px solid #000; */
+  padding-left: 2%;
+  padding-right: 2%;
+}
+.tool:first-child {
+  padding-left: 0;
+}
+.Keyword {
+  margin-top: 4%;
+  font-weight: 900;
+}
+.bg {
+  background-color: #000;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-weight: 500;
+}
+.circleBox {
+  display: flex;
+  margin-bottom: 10%;
+}
+.circle {
+  margin-top: 2%;
+  margin-right: 2%;
+}
+.circle:last-child {
+  margin-right: 0;
+}
+.circle1 {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  background-color: #fff;
+}
+.circle2 {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  background-color: #fffbc1;
+}
+.circle3 {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  background-color: #ff9de6;
+}
+.circle4 {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  background-color: #c896f8;
+}
+.TYPOGRAPHYBox {
+  display: flex;
+  margin-bottom: 10%;
+}
+.KO,
+.ENG {
+  margin-top: 2%;
+}
+.KO {
+  display: flex;
+}
+.lng {
+  font-family: "NotoSans", 돋움, sans-serif;
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-align: center;
+}
+.font {
+  padding: 0 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.border {
+  border-right: 1px solid #000;
+}
+.noto {
+  font-family: "NotoSans", 돋움, sans-serif;
+  font-size: 2.2rem;
+  font-weight: 400;
+}
+.yang {
+  font-size: 2.2rem;
+  font-family: "양진체", 돋움, sans-serif;
+  margin-top: 5%;
+}
+.paly {
+  font-size: 2.2rem;
+  font-weight: 500;
+}
+.Publishing {
+  height: 38vh;
+}
+.PublishingBox {
+  margin-bottom: 10%;
+}
+.PublishingBox ul {
+  line-height: 2;
+}
+.PublishingBox li {
+  list-style: disc;
+  font-family: "NotoSans", 돋움, sans-serif;
+  font-size: 1.1rem;
+  font-weight: 400;
+}
+
+/* .Review_container {
+  width: 100%;
+  height: 100vh;
+  background: url(/common/images/object/articleBackground_1920.png) no-repeat
+    50% / cover;
+  position: relative;
+} */
+.ReviewBox {
+  width: 52vw;
+  margin-bottom: 10%;
+}
+.ReviewBox h2 {
+  font-family: "NotoSans", 돋움, sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.ReviewBox p {
+  margin-top: 2%;
+  font-family: "NotoSans", 돋움, sans-serif;
+  font-size: 1.2rem;
+  margin-bottom: 5%;
+  line-height: 1.6;
+}
+.btn {
+  display: flex;
+  justify-content: flex-end;
+}
+button {
+  background-color: transparent;
+  color: #000;
+  border: 1px solid #000;
+  width: 300px;
+  padding: 20px;
+  font-size: 2.2rem;
+  font-weight: 600;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: 0.5s;
+}
+button:hover {
+  background-color: #000;
+  color: #fff;
+}
+/* scrollTo */
+.scrollTo {
+  position: absolute;
+  bottom: 5%;
+  right: 2%;
+  color: #292929;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: 1s;
+}
+.scrollTo:hover {
+  color: #000;
+}
+.material-symbols-outlined {
+  cursor: pointer;
+  font-size: 90px;
+  font-weight: 100;
+
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+.material-symbols-outlined:hover {
+  animation: none;
+}
+.scrollTo p {
+  font-weight: 600;
+  font-style: italic;
+
+  font-size: 1.5rem;
+}
+
+/* footer */
+footer {
+  background-color: #000;
+  color: #fff;
+
+  width: 100%;
+  height: 20vh;
+  padding: 40px 70px;
+  color: #b5b5b5;
+  box-sizing: border-box;
+}
+.banner {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+  /* height: 300px; */
+  position: relative;
+}
+.wishList_prev {
+  width: 50%;
+  background: url(/project/nexon/veiled_background01.png) no-repeat 50% / cover;
+  height: 20vw;
+}
+.wishList_prev a {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 2.4rem;
+  color: #ffffff6c;
+}
+.prev_title {
+  z-index: 9;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: transform 0.5s;
+}
+.wishList_prev a:hover .prev_title {
+  transform: translateY(-10px);
+}
+.prev_title h3 {
+  font-size: 2rem;
+  font-weight: 500;
+  color: #a8a8a8;
+}
+.prev_title h2 {
+  font-size: 2rem;
+  font-weight: 500;
+  font-family: "NotoSans", 돋움, sans-serif;
+}
+.wishList_prev a::after,
+.wishList_next a::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: background 0.3s;
+}
+.wishList_prev a:hover,
+.wishList_next a:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+  transition: 0.3s;
+  color: #ffffff;
+}
+.next_title {
+  z-index: 9;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: transform 0.5s;
+}
+.wishList_next a {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 2.4rem;
+  color: #ffffff6c;
+}
+.wishList_next {
+  width: 50vw;
+  height: 20vw;
+  background: url(/project/knotters/img_main_intro.jpg) no-repeat 50% / cover;
+}
+.next_title h3 {
+  font-size: 2rem;
+  font-weight: 500;
+  color: #a8a8a8;
+}
+.next_title h2 {
+  font-size: 2rem;
+  font-weight: 500;
+  font-family: "NotoSans", 돋움, sans-serif;
+}
+.wishList_next a:hover .next_title {
+  transform: translateY(-10px);
+}
+/* .footerTitle {
+    display: flex;
+    justify-content: flex-end;
+    align-items: baseline;
+
+} */
+.footerMain_font {
+  display: flex;
+  align-items: flex-end;
+}
+footer .copy {
+  margin-top: 40px;
+  /* border-top: 1px solid #333; */
+  width: 100%;
+  text-align: right;
+}
+footer h3 {
+  font-size: 2rem;
+  margin-right: auto;
+  font-weight: 500;
+}
+footer p {
+  font-family: "NotoSans", 돋움, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+}
+footer p:nth-child(1) {
+  margin-bottom: 40px;
+}
+.footerMg {
+  margin-right: 100px;
 }
