작업 내역 확인

--- a/common/style/index_style.css
+++ b/common/style/index_style.css
@@ -453,6 +453,10 @@ img.Project_Img {
   border-radius: 10px;
   margin-right: 15px;
 }
+/* .iden {
+  color: #000;
+  border-color: #fff;
+} */
 
 /* 왼쪽 타이틀 */
 .portfolioTxt {
