--- a/project/identity/style/identity.css
+++ b/project/identity/style/identity.css
@@ -82,7 +82,7 @@ header .Menu li:nth-child(4) {
 main {
   width: 100%;
   height: 100vh;
-  background: url(/project/identity/images/webMain.png) no-repeat 50% / cover;
+  background: url(../images/webMain.png) no-repeat 50% / cover;
   position: relative;
 }
 main .projectTitleBox {
