--- a/project/identity/style/identity.css
+++ b/project/identity/style/identity.css
@@ -130,7 +130,7 @@ section {
   width: 100%;
   /* height: 2200px; */
   position: relative;
-  background-color: #fff;
+  /* background-color: #fff; */
   box-sizing: border-box;
   background: fixed url(/common/images/object/articleBackground_1920.png)
     no-repeat 50% / cover;
