--- a/project/peachc/common/style/swiperCss.css
+++ b/project/peachc/common/style/swiperCss.css
@@ -6,23 +6,56 @@ body {
 }
 
 .swiper {
-  width: 50%;
-  height: 50%;
+  width: 60%;
+  height: 100%;
+  margin-right: 0;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
 }
+
+.swiper-wrapper {
+  display: flex;
+  /* flex-direction: column; */
+  /* justify-content: center; */
+  align-items: center;
+  gap: 10px;
+}
+/* .swiper-slide-active {
+  width: 250px;
+  height: 600px;
+} */
 
 .swiper-slide {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* flex-direction: column; */
   justify-content: center;
+  align-items: center;
   position: relative;
+  /* width: 30%;
+  height: 60%; */
+  margin: 0 auto;
+  text-align: center;
 }
-
+.swiper-slide swiper-slide-next {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
 .swiper-slide img {
   display: block;
-  width: 100%;
+  width: 60%;
+  margin: 0 auto;
 }
-
+.swiper-slide img.liner {
+  width: 180px;
+}
+.swiper-slide img.mascara {
+  width: 220px;
+}
+.swiper-slide .liner {
+}
 @media only screen and (min-width: 769px) {
   .swiper-slide:first-child {
     transition: transform 100ms;
@@ -33,38 +66,49 @@ body {
   }
 
   .swiper-slide.swiper-slide-active:first-child {
-    transform: translateX(50%);
+    /* transform: translateX(100%); */
+    /* cursor: grab; */
+    /* transform: translate3d(1590px, 0px, 0px); */
+    transition-duration: 0ms;
     z-index: 2;
   }
 
-  .swiper-slide.swiper-slide-active:first-child img {
+  /* .swiper-slide.swiper-slide-active:first-child img {
     box-shadow: 0px 32px 80px rgba(0, 0, 0, 0.35);
-  }
+  } */
 
   .swiper-slide:nth-child(2) {
     transition: transform 100ms;
   }
 
   .swiper-slide.swiper-slide-next:nth-child(2) {
-    transform: translateX(55%);
+    /* transform: translateX(1000px); */
+    /* transform: translate3d(1000px, 0px, 0px); */
     z-index: 1;
   }
 
   .swiper[dir="rtl"] .swiper-slide.swiper-slide-active:first-child {
-    transform: translateX(-50%);
+    /* transform: translateX(100%); */
+    transform: translate3d(1500px, 0px, 0px);
   }
 
   .swiper[dir="rtl"] .swiper-slide.swiper-slide-next:nth-child(2) {
-    transform: translateX(-55%);
+    transform: translate3d(400px, 0px, 0px);
   }
 }
 .swiper,
 swiper-container {
   margin-left: auto;
+  /* margin-right:auto; */
   position: relative;
   overflow: hidden;
   list-style: none;
   padding: 0;
   z-index: 1;
   display: block;
+  margin: 0;
+}
+
+element.style {
+  width: 300px;
 }
