--- a/project/peachc/common/style/peachc_Page.css
+++ b/project/peachc/common/style/peachc_Page.css
@@ -84,8 +84,12 @@ header .Menu li:nth-child(4) {
 main {
   width: 100%;
   height: 100vh;
-  background: url(../images/webMain.png) no-repeat 50% / cover;
+  background-image: url(/project/peachc/common/images/modal/PALETTE_lay_04.jpg);
+  background-position: right top;
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
+  /* color: #fff; */
 }
 main .projectTitleBox {
   position: absolute;
@@ -241,9 +245,11 @@ section {
   margin-top: 8%;
 }
 .logo {
+    margin-top: 5%;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: auto;
 }
 .figure_symbol {
   margin-right: 5%;
@@ -261,17 +267,19 @@ img.symbol {
   margin-right: 25%;
 }
 figcaption {
+    margin-top: 3%;
   text-align: center;
 }
 .Keyword {
   /* border: 1px solid #000; */
 }
 .logo_mention {
-  width: 415px;
+  width: 700px;
   font-family: "NotoSans", 돋움, sans-serif;
   font-size: 1.1rem;
   font-weight: 400;
   line-height: 1.6;
+  margin-left: 3%;
 }
 .innerMention {
   font-family: "NotoSans", 돋움, sans-serif;
@@ -318,29 +326,25 @@ figcaption {
   width: 100px;
   height: 100px;
   border-radius: 100%;
-  background-color: #fff;
+  background-color: #EBFF00;
 }
 .circle2 {
   width: 100px;
   height: 100px;
   border-radius: 100%;
-  background-color: #fffbc1;
+  background-color: #EAD0F3;
 }
 .circle3 {
   width: 100px;
   height: 100px;
   border-radius: 100%;
-  background-color: #ff9de6;
-}
-.circle4 {
-  width: 100px;
-  height: 100px;
-  border-radius: 100%;
-  background-color: #c896f8;
+  background-color: #FCB4AC;
 }
 .TYPOGRAPHYBox {
   display: flex;
   margin-bottom: 10%;
+  justify-content: center;
+  align-items: center;
 }
 .KO,
 .ENG {
@@ -360,22 +364,21 @@ figcaption {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 .border {
   border-right: 1px solid #000;
 }
-.noto {
-  font-family: "NotoSans", 돋움, sans-serif;
+.Spoqa {
   font-size: 2.2rem;
-  font-weight: 400;
+  font-family: "SpoqaHanSansNeo", 돋움, sans-serif;
+  font-weight: 600;
+  text-align: center;
 }
-.yang {
-  font-size: 2.2rem;
-  font-family: "양진체", 돋움, sans-serif;
-  margin-top: 5%;
-}
-.paly {
-  font-size: 2.2rem;
+.Frank {
+    font-family: "Frank", 돋움, sans-serif;
+    font-weight: 600;
+  font-size: 2.4rem;
   font-weight: 500;
 }
 .Publishing {
@@ -507,7 +510,7 @@ footer {
 }
 .wishList_prev {
   width: 50%;
-  background: url(../images/img_main_intro.jpg) no-repeat 50% / cover;
+  background: url(/project/identity/images/webMain.png) no-repeat 50% / cover;
   height: 20vw;
 }
 .wishList_prev a {
@@ -578,7 +581,7 @@ footer {
 .wishList_next {
   width: 50vw;
   height: 20vw;
-  background: url(/project/peachc/common/images/modal/PALETTE_lay_04.jpg) no-repeat left top / cover;
+  background: url(/project/knotters/img_main_intro.jpg) no-repeat 50% / cover;
 }
 .next_title h3 {
   font-size: 2rem;
